[project]
name = "workshop-estrutura"
version = "0.1.0"
description = "meu projeto de etl"
authors = [
    {name = "riuler",email = "riulersilverio@hotmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "3.11.3"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
